Fix center alignment of images.

--- a/files/assets/css/custom.css
+++ b/files/assets/css/custom.css
@@ -48,7 +48,6 @@ kbd {
 }
 
 img.centered {
-    display: block;
     margin-left: auto;
     margin-right: auto;
 }
